# VibedInsight

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIRSTDISCUSSION.md  IDEAS.md  INITIALIDEA.md  LICENSE  README.md  SECURITY.md  TESTING.md  TODO.md  deploy.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  flutter-release.yml
app/: README.md  pubspec.yaml
app/android/: build.gradle.kts  key.properties.template
app/integration_test/: app_test.dart
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
backend/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  PRIVACY_DESIGN.md  PRIVACY_DESIGN_FINAL.md  PRIVACY_DESIGN_V2.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_privacy_focused_schema.py  002_add_content_embeddings.py  003_enhanced_weekly_summary.py  8a7e527e667f_add_user_items_junction_table.py
backend/app/: config.py  database.py  dependencies.py  main.py  schemas.py
backend/app/models/: __init__.py  content.py  user.py
backend/app/prompts/: summary.txt  topics.txt  weekly_summary.txt
backend/app/routers/: admin.py  auth.py  ingest.py  items.py  topics.py  user_items.py  vault.py  weekly.py
backend/app/services/: auth.py  embeddings.py  extractor.py  summarizer.py
backend/scripts/: backup.sh
backend/tests/: test_api.py
docs/: API.md  DESIGN.md  PRIVACY_POLICY.md
(+41 files in other folders)
